--- a/src/projects/CMakeTests/CrossPlatformTest/CMakeLists.txt
+++ b/src/projects/CMakeTests/CrossPlatformTest/CMakeLists.txt
@@ -18,10 +18,10 @@ SOURCE_GROUP(common REGULAR_EXPRESSION ".*/common/.*" )
 SOURCE_GROUP(shaders REGULAR_EXPRESSION ".*/.*shader$" )
 
 if (NOT ${CMAKE_GENERATOR} MATCHES "Xcode" )
-add_custom_command(
-   TARGET CrossPlatformTest POST_BUILD
-   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/CrossPlatformTest${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/CrossPlatformTest/"
-)
+# add_custom_command(
+   # TARGET CrossPlatformTest POST_BUILD
+   # COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/CrossPlatformTest${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/CrossPlatformTest/"
+# )
 
 elseif (${CMAKE_GENERATOR} MATCHES "Xcode" )
 
